--- a/static/prompt_build.css
+++ b/static/prompt_build.css
@@ -27,14 +27,13 @@ body{
 }
 .n_problem{
     text-align: center;
-    margin-top: 300px;
-}
-h1{
-    font-size: 30px;
+    margin-top: 200px;
 }
 
 p{
-    font-size: 18px;
+    font-size: 12px;
+    color: #000;
+    opacity: 0.6;
 }
 
 .flex-child:first-child{
@@ -174,7 +173,7 @@ legend {
 	margin: -0.3125rem;
 }
 
-#prompt-content{
+.prompt-content{
   text-align: center;
 }
 
@@ -185,7 +184,7 @@ legend {
 .add_frame{
   display: inline-block;
   margin-top: 10px;
-  width: 900px;
+  width: 800px;
 }
 .sample{
   display: inline-block;
