--- a/templates/select.html
+++ b/templates/select.html
@@ -10,6 +10,9 @@
         <div class="select_topic">
             <input type="button" value="Topic 1" name="t_1" onclick="window.location.href = '/topic_1'">
             <input type="button" value="Topic 2" name="t_2" style="margin-top: 10px;"onclick="window.location.href = '/topic_2'">
+            <input type="button" value="Topic 3" name="t_3" style="margin-top: 10px;opacity: 0.6;"onclick="window.location.href = '/topic_3'" disabled>
+            <input type="button" value="Topic 4" name="t_4" style="margin-top: 10px;opacity: 0.6;"onclick="window.location.href = '/topic_4'" disabled>
+            <input type="button" value="Topic 5" name="t_5" style="margin-top: 10px;opacity: 0.6;"onclick="window.location.href = '/topic_5'" disabled>
         </div>
     </body>
 </html>
