--- a/templates/topic_1_e.html
+++ b/templates/topic_1_e.html
@@ -10,7 +10,8 @@
             <div class="flex-child">
                 <h1>Problem</h1>
                 <div class="n_problem">
-                    <p id="problem_d"></p>
+                    <h2 id="problem_d"></h2>
+                    <h2 id="problem_iao"></h2>
                 </div>
             </div>
 
@@ -20,12 +21,16 @@
                     <fieldset>
                         <legend>輸入</legend>
                         <input type="text"id="input_define" name="prompti" placeholder="整數，單行輸入，代表數字" required>
+                        <p>型別種類:(多)整數、字串、(二維)串列、浮點數、字典...</p>
+                        <p>輸入格式:單行輸入、多行輸入</p>
+                        <p>輸入意涵:代表月數、天數、第n項費伯數列...</p>
                     </fieldset>
                 </div>
                 <div class ="c_output">
                     <fieldset>
                         <legend>輸出</legend>
                         <input type="text" id="output_define" name="prompto" placeholder="印出指定整數結果" required>
+                        <p>輸出結果:印出指定 整數/字串/串列 結果</p>
                     </fieldset>
                 </div>
                 <div class ="sample">
@@ -75,22 +80,18 @@
             </div>
             <div id="target-content">
                 <div class="popup-header">
-                    <span style="font-weight:bold">Check search result: </span>
+                    <span style="font-weight:bold">Check Search Result: </span>
                     <button id="btnpopclose" class="popup-close">×</button>
                 </div>
-                <div id="prompt-content">
-                    <p>此題處理方式:<span id="g"></span></p>
-                    <p>概念轉換成程式碼為:<span id="k"></span></p>
-                    <p>選擇輸入為:<span id="i"></span></p>
-                    <p>選擇輸出為:<span id="o"></span></p>
+                <div name="prompt-content">
+                    <h3 style="text-align: center;">處理方式:<span id="g"></span></h3>
+                    <h3 style="text-align: center;">概念轉換成程式碼為:<span id="k"></span></h3>
                 </div>
                 <hr>
-                <p>相關之範例題目為:</p>
-
-                <div id="old">
-                    
-                 </div>
-
+                <div name="prompt-content">
+                    <h3 style="text-align: center;">相關範例題目搜尋結果</h3>
+                    <div id="old"></div>
+                </div>
                 <input class="button-33" style="top:50%;left:50%;bottom: 20px;;" type="submit" value="Ask AI">
             </div>
         </div>
@@ -111,12 +112,18 @@
    var parameters = []
 
    
-   var extend = "中央咖啡店的店面房租為每月6000元，如果當月天數不足月，則也算全額6000元，\n請幫店長寫出一python程式，每當輸入月數跟天數去計算應繳費之金額。"
-
+   var extend = "中央咖啡店的店面房租為每月6000元，如果當月天數不足月，則也算全額6000元，\n"+
+                "請幫店長寫出一python程式，每當輸入月數跟天數去計算應繳費之金額。"
+   var iao   =  "範例輸入:\n"+
+                "2 3\n"+
+                "範例輸出:\n"+
+                "18000"
+   iao = iao.replace(/\n/g,'<br>')
    extend = extend.replace(/\n/g,'<br>')
    
    $(document).ready(function () {
         document.getElementById("problem_d").innerHTML = extend
+        document.getElementById("problem_iao").innerHTML = iao
    });
    $('input[type=radio][name="promptc"]').on('change', function() {
         category = $(this).val()
@@ -168,21 +175,20 @@
                 success:function(result){
                     $('#g').html(category)
                     $('#k').html(keyword)
-                    $('#i').html(input)
-                    $('#o').html(output)
                     // console.log(result)
                     var display = ""
                     result.forEach(element => {
                         // console.log(element)
-                        var t1 = element[2]
+                        var t1 = "<h4 style=\"text-align:center\">"+element[2]+"</h4>"
                         t1 = t1.replace(/\n/g,'<br>')
                         description += element[2]
-                        var t2 = element[3]
+                        var t2 = "<h4 style=\"text-align:center\">"+element[3]+"</h4>"
                         t2 = t2.replace(/\n/g,'<br>')
                         solution += element[3]
-                        display+=t1+"<br>"
-                        console.log(display)
-                        display+=t2+"<hr>"
+                        display+=t1
+                        display+="<br>"
+                        display+=t2
+                        // console.log(display)
                         
                     });
                     $('#old').html(display)
