--- a/templates/topic_2_e.html
+++ b/templates/topic_2_e.html
@@ -3,7 +3,7 @@
         <link rel="stylesheet" href="{{ url_for('static', filename='prompt_build.css') }}">
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-        <title>TOPIC 1</title>
+        <title>TOPIC 1 EXTEND</title>
     </head>
     <body>
         <div class="main">
@@ -23,7 +23,7 @@
                         <input type="text"id="input_define" name="prompti" placeholder="整數，單行輸入，代表數字" required>
                         <p>型別種類:(多)整數、字串、(二維)串列、浮點數、字典...</p>
                         <p>輸入格式:單行輸入、多行輸入</p>
-                        <p>輸入意涵:代表月數、天數、第n項費伯數列...</p>
+                        <p>輸入意涵:代表月數、天數、班表、第n項費伯數列...</p>
                     </fieldset>
                 </div>
                 <div class ="c_output">
@@ -75,16 +75,25 @@
                     </fieldset>
                 </div>
                 <!-- <input class="button-33" id= "search" style="background-color:	#00BB00;" value="Search"> -->
-                <input class="button-33" type="submit" value="Ask AI">
+                <!-- <input class="button-33" type="submit" value="Ask AI"> -->
+                <input class="button-33" id= "search" style="background-color:	#00BB00;" value="Search">
             </div>
-            
-            <!-- <div class="add_frame">
-                <label for="name">參數名稱:</label>
-                <input type="text" class="parameter" name="p_n" placeholder="a">
-                <label for="type">參數型別:</label>
-                <input type="text" class="parameter" name="p_t" placeholder="int、str、list">
-                <button class="button-34" style="background-color:#EA0000"onclick="delete_memory()">刪除參數</button>
-            </div> -->
+            <div id="target-content">
+                <div class="popup-header">
+                    <span style="font-weight:bold">Check Search Result: </span>
+                    <button id="btnpopclose" class="popup-close">×</button>
+                </div>
+                <div name="prompt-content">
+                    <h3 style="text-align: center;">處理方式:<span id="g"></span></h3>
+                    <h3 style="text-align: center;">應用到的程式概念為:<span id="k"></span></h3>
+                </div>
+                <hr>
+                <div name="prompt-content">
+                    <h3 style="text-align: center;">相關範例題目搜尋結果</h3>
+                    <div id="old"></div>
+                </div>
+                <input class="button-33" style="top:50%;left:50%;bottom: 20px;;" type="submit" value="Ask AI">
+            </div>
         </div>
     </body>
 </html>
@@ -102,21 +111,25 @@
    var sample_o
    var parameters = []
 
-   var basic = problems[2]['Problem_Description']
-   basic = basic.replace(/\n/g,'<br>')
-
-   var iao = problems[2]['IAO']
+   
+   var extend = "中央咖啡店老闆要舉辦為期三天的員工旅遊，假設一天只有一班分別以0代表沒班1代表有班，\n"+
+                "現在老闆有一班表串列，請幫忙老闆找出可以沒班的連續三天為哪幾天?"
+   var iao   =  "範例輸入:\n"+
+                "0,0,1,1,0,0,0,1,0,0,1,1,1,1,1,1,0,0\n"+
+                "範例輸出:\n"+
+                "['第5天', '第6天', '第7天']"
    iao = iao.replace(/\n/g,'<br>')
+   extend = extend.replace(/\n/g,'<br>')
    
    $(document).ready(function () {
-        document.getElementById("problem_d").innerHTML = basic
+        document.getElementById("problem_d").innerHTML = extend
         document.getElementById("problem_iao").innerHTML = iao
    });
    $('input[type=radio][name="promptc"]').on('change', function() {
         category = $(this).val()
    })
-   $('input[type=radio][name="promptk"]').on('change', function() {
-        keyword = $(this).val()
+   $('input[type=checkbox][name="promptk"]:checked').each(function(){
+        keyword+=this.value
    })
 
    var add_div=1;
@@ -139,11 +152,89 @@
         var obj = document.getElementById(id)
         document.getElementById('m_c').removeChild(obj)
    }
+   var display = ""
+   $('#btnpopclose').click(function(){
+        keyword = []
+        category = ""
+        display = ""
+        $('input[type=checkbox][name="promptk"]').prop("checked",false)
+        $('input[type=radio][name="promptc"]').prop("checked",false)
+        $('#g').html(category)
+        $('#k').html(keyword)
+        $('#old').html(display)
+        $('#target-content').hide()
+   })
+   //點選完進行索引
+   $('#search').click(function(){
+        $('input[type=checkbox][name="promptk"]:checked').each(function(){
+                    keyword.push(this.value)
+        })
+        var search_case = {
+            
+            Category:category,
+            Keyword:keyword,
+        }
+        // console.log(prompt)
+        
+        //ajax開始
+        $.ajax({
+                type:"POST",
+                url:"/search",
+                data:JSON.stringify(search_case),
+                contentType:"application/json",
+                dataType:'json',
+                success:function(result){
+                    $('#g').html(category)
+                    $('#k').html(keyword)
+                    // console.log(result)
+                    
+                    
+                    // console.log(element)
+                    var t1 = "<h4 style=\"text-align:center\">"+result['description']+"</h4>"
+                    t1 = t1.replace(/\n/g,'<br>')
+                    description += result['description']
+                    var t2 = "<h4 style=\"text-align:center\">"+result['solution']+"</h4>"
+                    t2 = t2.replace(/\n/g,'<br>')
+                    solution += result['solution']
+                    display+=t1
+                    display+="<br>"
+                    display+=t2
+                    // console.log(display)
+                        
+                    
+                    $('#old').html(display)
+                    $('#target-content').show()
+                }
+        })
+        
+   })
+   //
+   //將索引產出之舊問題整理
+   function check_category(category){
+        if (category=="迴圈"){
+            return true
+        }else{
+            return false
+        }
+   }
 
-//    $('#btnpopclose').click(function(){
-//         $('#target-content').hide();
-//    })
-   
+   function check_keyword(keyword){
+        check_1 = ['for','if_else']
+        check_2 = ['if_else','for']
+
+        if (keyword.length!==2){
+            return false;
+        }
+
+        for (var i = 0; i < keyword.length; ++i) {
+            if (keyword[i] !== check_1[i]&&keyword[i] !== check_2[i]) {
+                return false
+            }
+            
+        }
+
+        return true
+   }
    //送出
    $('input[type=submit]').click(function(){
             input = document.getElementById('input_define').value
@@ -162,13 +253,10 @@
                 }
                 parameters.push(temp)
             }
-            $('input[type=checkbox][name="promptk"]:checked').each(function(){
-                    keyword.push(this.value)
-            })
 
             var choice={
-                        Mode:1,
-                        Topic:1,
+                        Mode:2,
+                        Topic:2,
                         Input:input,
                         Output:output,
                         S_input:sample_i,
@@ -176,22 +264,32 @@
                         Category:category,
                         Keyword:keyword,
                         Parameters:parameters,
-                        Problem_n:basic.toString(),
+                        Problem_n:extend.toString(),
                         Problem_o:description,
                         Solution:solution,
                         Hint:hint,
             }
-            // console.log(choice)
-            $.ajax({
-                type:"POST",
-                url:"/result",
-                data:JSON.stringify(choice),
-                contentType:"application/json",
-                dataType:'json',
-                success:function(result){
-                    window.location.href = "/result"
+            
+            if (check_category(category) &&  check_keyword(keyword)){
+                $.ajax({
+                    type:"POST",
+                    url:"/result",
+                    data:JSON.stringify(choice),
+                    contentType:"application/json",
+                    dataType:'json',
+                    success:function(result){
+                        window.location.href = "/result"
+                    }
+                })
+            }else{
+                if (!check_category(category)){
+                    alert("主要處理方式選擇有誤，請重新選擇")
                 }
-            })
+                
+                if (!check_keyword(keyword)){
+                    alert("程式概念選擇有誤，請重新選擇")
+                }
+            }
     });
 
 </script>
